testing the model on entire testdata

--- a/examples/mnist/inferencing.ipynb
+++ b/examples/mnist/inferencing.ipynb
@@ -2,126 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "indices should be either on cpu or on the same device as the indexed tensor (cpu)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 76\u001b[0m\n\u001b[0;32m     73\u001b[0m true_label \u001b[38;5;241m=\u001b[39m sample[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m# Perform prediction using the all activity strategy\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m all_activity_pred \u001b[38;5;241m=\u001b[39m \u001b[43mall_activity\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     77\u001b[0m \u001b[43m    \u001b[49m\u001b[43mspikes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mspike_record\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     78\u001b[0m \u001b[43m    \u001b[49m\u001b[43massignments\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43massignments\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     79\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_labels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_classes\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;66;03m# Perform proportion-based prediction\u001b[39;00m\n\u001b[0;32m     83\u001b[0m proportion_pred \u001b[38;5;241m=\u001b[39m proportion_weighting(\n\u001b[0;32m     84\u001b[0m     spikes\u001b[38;5;241m=\u001b[39mspike_record,\n\u001b[0;32m     85\u001b[0m     assignments\u001b[38;5;241m=\u001b[39massignments,\n\u001b[0;32m     86\u001b[0m     proportions\u001b[38;5;241m=\u001b[39mproportions,\n\u001b[0;32m     87\u001b[0m     n_labels\u001b[38;5;241m=\u001b[39mn_classes\n\u001b[0;32m     88\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\user\\Desktop\\snn_python_3_10\\.venv\\lib\\site-packages\\bindsnet\\evaluation\\evaluation.py:125\u001b[0m, in \u001b[0;36mall_activity\u001b[1;34m(spikes, assignments, n_labels)\u001b[0m\n\u001b[0;32m    122\u001b[0m         indices \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnonzero(assignments \u001b[38;5;241m==\u001b[39m i)\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    124\u001b[0m         \u001b[38;5;66;03m# Compute layer-wise firing rate for this label.\u001b[39;00m\n\u001b[1;32m--> 125\u001b[0m         rates[:, i] \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msum(\u001b[43mspikes\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindices\u001b[49m\u001b[43m]\u001b[49m, \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m/\u001b[39m n_assigns\n\u001b[0;32m    127\u001b[0m \u001b[38;5;66;03m# Predictions are arg-max of layer-wise firing rates.\u001b[39;00m\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39msort(rates, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, descending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)[\u001b[38;5;241m1\u001b[39m][:, \u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: indices should be either on cpu or on the same device as the indexed tensor (cpu)"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "from bindsnet.models import DiehlAndCook2015\n",
-    "from bindsnet.datasets import MNIST\n",
-    "from bindsnet.encoding import PoissonEncoder\n",
-    "from torchvision import transforms\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "from bindsnet.network.monitors import Monitor\n",
-    "from bindsnet.evaluation import all_activity, assign_labels, proportion_weighting\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Parameters (same as during training)\n",
-    "n_neurons = 100  # Replace with the actual number of neurons used in training\n",
-    "time = 250       # Replace with the actual time used during training\n",
-    "dt = 1.0         # Replace with the actual time step\n",
-    "intensity = 128  # Replace with the actual intensity\n",
-    "n_classes = 10   # Number of classes (digits 0-9)\n",
-    "\n",
-    "# Initialize the network architecture (same as during training)\n",
-    "network = DiehlAndCook2015(\n",
-    "    n_inpt=784,\n",
-    "    n_neurons=n_neurons,\n",
-    "    exc=22.5,    # Replace with actual excitatory current\n",
-    "    inh=120,     # Replace with actual inhibitory current\n",
-    "    dt=dt,\n",
-    "    norm=78.4,   # Replace with actual normalization\n",
-    "    theta_plus=0.05,  # Replace with actual threshold increment\n",
-    "    inpt_shape=(1, 28, 28),  # Input shape for MNIST (channels, height, width)\n",
-    ")\n",
-    "\n",
-    "# Load the saved weights, assignments, proportions, and rates\n",
-    "checkpoint = torch.load('./snn_train.pt')\n",
-    "\n",
-    "network.load_state_dict(checkpoint['model_state_dict'])\n",
-    "assignments = checkpoint['assignments']\n",
-    "proportions = checkpoint['proportions']\n",
-    "rates = checkpoint['rates']\n",
-    "\n",
-    "# Set the network in evaluation mode\n",
-    "network.train(mode=False)\n",
-    "\n",
-    "# Add a spike monitor to the 'Ae' layer\n",
-    "spike_monitor = Monitor(network.layers[\"Ae\"], state_vars=[\"s\"], time=int(time / dt))\n",
-    "network.add_monitor(spike_monitor, name=\"Ae_spikes\")\n",
-    "\n",
-    "# Load the MNIST test dataset\n",
-    "test_dataset = MNIST(\n",
-    "    PoissonEncoder(time=time, dt=dt),\n",
-    "    None,\n",
-    "    root=os.path.join(\"..\", \"..\", \"data\", \"MNIST\"),\n",
-    "    download=True,\n",
-    "    train=False,\n",
-    "    transform=transforms.Compose(\n",
-    "        [transforms.ToTensor(), transforms.Lambda(lambda x: x * intensity)]\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "# Get a single sample from the test dataset\n",
-    "sample = test_dataset[0]  # You can change the index for different samples\n",
-    "\n",
-    "# Prepare input for the network\n",
-    "inputs = {\"X\": sample[\"encoded_image\"].view(int(time / dt), 1, 1, 28, 28)}\n",
-    "\n",
-    "# Run the network on the input\n",
-    "network.run(inputs=inputs, time=time)\n",
-    "\n",
-    "# Record spikes from the excitatory layer\n",
-    "spike_record = torch.zeros((1, int(time / dt), n_neurons))\n",
-    "spike_record[0] = network.monitors[\"Ae_spikes\"].get(\"s\").squeeze()\n",
-    "\n",
-    "# Get the true label from the sample\n",
-    "true_label = sample[\"label\"]\n",
-    "\n",
-    "# Perform prediction using the all activity strategy\n",
-    "all_activity_pred = all_activity(\n",
-    "    spikes=spike_record,\n",
-    "    assignments=assignments,\n",
-    "    n_labels=n_classes\n",
-    ")\n",
-    "\n",
-    "# Perform proportion-based prediction\n",
-    "proportion_pred = proportion_weighting(\n",
-    "    spikes=spike_record,\n",
-    "    assignments=assignments,\n",
-    "    proportions=proportions,\n",
-    "    n_labels=n_classes\n",
-    ")\n",
-    "\n",
-    "# Reset state variables\n",
-    "network.reset_state_variables()\n",
-    "\n",
-    "# Visualize the input image and print predictions\n",
-    "plt.imshow(sample[\"image\"].view(28, 28), cmap=\"gray\")\n",
-    "plt.title(f\"True Label: {true_label.item()}\")\n",
-    "plt.show()\n",
-    "\n",
-    "print(f\"Predicted Label (All Activity): {all_activity_pred.item()}\")\n",
-    "print(f\"Predicted Label (Proportion Weighting): {proportion_pred.item()}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -255,6 +135,169 @@
     "\n",
     "print(f\"Predicted Label (All Activity): {all_activity_pred.item()}\")\n",
     "print(f\"Predicted Label (Proportion Weighting): {proportion_pred.item()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on: cuda\n",
+      "\n",
+      "Begin testing\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 62/10000 [00:40<1:47:46,  1.54it/s]\n",
+      "  0%|          | 10/10000 [00:04<1:20:08,  2.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "All Activity Accuracy: 0.01%\n",
+      "Proportion Weighting Accuracy: 0.02%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from bindsnet.models import DiehlAndCook2015\n",
+    "from bindsnet.datasets import MNIST\n",
+    "from bindsnet.encoding import PoissonEncoder\n",
+    "from torchvision import transforms\n",
+    "from bindsnet.evaluation import all_activity, proportion_weighting\n",
+    "from bindsnet.network.monitors import Monitor\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Parameters (same as during training)\n",
+    "n_neurons = 100  # Replace with the actual number of neurons used in training\n",
+    "time = 250       # Replace with the actual time used during training\n",
+    "dt = 1.0         # Replace with the actual time step\n",
+    "intensity = 128  # Replace with the actual intensity\n",
+    "n_classes = 10   # Number of classes (digits 0-9)\n",
+    "\n",
+    "# Set the device to GPU if available, else CPU\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Running on: {device}\")\n",
+    "\n",
+    "# Initialize the network architecture (same as during training)\n",
+    "network = DiehlAndCook2015(\n",
+    "    n_inpt=784,\n",
+    "    n_neurons=n_neurons,\n",
+    "    exc=22.5,    # Replace with actual excitatory current\n",
+    "    inh=120,     # Replace with actual inhibitory current\n",
+    "    dt=dt,\n",
+    "    norm=78.4,   # Replace with actual normalization\n",
+    "    theta_plus=0.05,  # Replace with actual threshold increment\n",
+    "    inpt_shape=(1, 28, 28),  # Input shape for MNIST (channels, height, width)\n",
+    ").to(device)\n",
+    "\n",
+    "# Load the saved weights, assignments, proportions, and rates\n",
+    "checkpoint = torch.load('./snn_train.pt')\n",
+    "\n",
+    "network.load_state_dict(checkpoint['model_state_dict'])\n",
+    "assignments = checkpoint['assignments'].to(device)\n",
+    "proportions = checkpoint['proportions'].to(device)\n",
+    "rates = checkpoint['rates'].to(device)\n",
+    "\n",
+    "# Set the network in evaluation mode\n",
+    "network.train(mode=False)\n",
+    "\n",
+    "# Add a spike monitor to the 'Ae' layer\n",
+    "spike_monitor = Monitor(network.layers[\"Ae\"], state_vars=[\"s\"], time=int(time / dt), device=device)\n",
+    "network.add_monitor(spike_monitor, name=\"Ae_spikes\")\n",
+    "\n",
+    "# Load the MNIST test dataset\n",
+    "test_dataset = MNIST(\n",
+    "    PoissonEncoder(time=time, dt=dt),\n",
+    "    None,\n",
+    "    root=os.path.join(\"..\", \"..\", \"data\", \"MNIST\"),\n",
+    "    download=True,\n",
+    "    train=False,\n",
+    "    transform=transforms.Compose(\n",
+    "        [transforms.ToTensor(), transforms.Lambda(lambda x: x * intensity)]\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "# Create a DataLoader for the test dataset\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
+    "\n",
+    "# Initialize counters for correct predictions\n",
+    "correct_all_activity = 0\n",
+    "correct_proportion = 0\n",
+    "total_samples = len(test_loader)\n",
+    "\n",
+    "# Run inference on the entire test set\n",
+    "print(\"\\nBegin testing\\n\")\n",
+    "pbar = tqdm(total=total_samples)\n",
+    "\n",
+    "for i, sample in enumerate(test_loader):\n",
+    "    if i ==10:\n",
+    "        break\n",
+    "    # Prepare input for the network (move it to GPU if available)\n",
+    "    inputs = {\"X\": sample[\"encoded_image\"].view(int(time / dt), 1, 1, 28, 28).to(device)}\n",
+    "    \n",
+    "    # Run the network on the input\n",
+    "    network.run(inputs=inputs, time=time)\n",
+    "    \n",
+    "    # Record spikes from the excitatory layer\n",
+    "    spike_record = torch.zeros((1, int(time / dt), n_neurons), device=device)\n",
+    "    spike_record[0] = network.monitors[\"Ae_spikes\"].get(\"s\").squeeze()\n",
+    "\n",
+    "    # Get the true label from the sample (move to GPU if necessary)\n",
+    "    true_label = sample[\"label\"].to(device)\n",
+    "\n",
+    "    # Perform prediction using the all activity strategy\n",
+    "    all_activity_pred = all_activity(\n",
+    "        spikes=spike_record,\n",
+    "        assignments=assignments,\n",
+    "        n_labels=n_classes\n",
+    "    )\n",
+    "\n",
+    "    # Perform proportion-based prediction\n",
+    "    proportion_pred = proportion_weighting(\n",
+    "        spikes=spike_record,\n",
+    "        assignments=assignments,\n",
+    "        proportions=proportions,\n",
+    "        n_labels=n_classes\n",
+    "    )\n",
+    "\n",
+    "    # Check if the predictions are correct\n",
+    "    correct_all_activity += (all_activity_pred == true_label).float().sum().item()\n",
+    "    correct_proportion += (proportion_pred == true_label).float().sum().item()\n",
+    "\n",
+    "    # Reset state variables for the next sample\n",
+    "    network.reset_state_variables()\n",
+    "    \n",
+    "    pbar.update()\n",
+    "\n",
+    "pbar.close()\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy_all_activity = 100.0 * correct_all_activity / total_samples\n",
+    "accuracy_proportion = 100.0 * correct_proportion / total_samples\n",
+    "\n",
+    "print(f\"\\nAll Activity Accuracy: {accuracy_all_activity:.2f}%\")\n",
+    "print(f\"Proportion Weighting Accuracy: {accuracy_proportion:.2f}%\")\n"
    ]
   },
   {
